@@ -31,10 +31,11 @@
                     <label>Paygate ID</label>
                     <config_path>payment/paygate/paygate_id</config_path>
                 </field>
-                <field id="encryption_key" translate="label" type="text" sortOrder="4" showInDefault="1"
+                <field id="encryption_key" translate="label" type="obscure" sortOrder="4" showInDefault="1"
                        showInWebsite="1" showInStore="1">
                     <label>Encryption Key</label>
                     <config_path>payment/paygate/encryption_key</config_path>
+                    <backend_model>Magento\Config\Model\Config\Backend\Encrypted</backend_model>
                 </field>
                 <field id="test_mode" translate="label" type="select" sortOrder="5" showInDefault="1" showInWebsite="1"
                        showInStore="1">
