@@ -11,7 +11,7 @@
 <!--suppress XmlHighlighting -->
 <config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="urn:magento:framework:Module/etc/module.xsd">
-    <module name="PayGate_PayWeb" setup_version="2.5.4">
+    <module name="PayGate_PayWeb" setup_version="2.5.5">
         <sequence>
             <module name="Magento_Checkout"/>
             <module name="Magento_Sales"/>
